# Copyright (c) Open Enclave SDK contributors.
# Licensed under the MIT License.

add_subdirectory(basic)
add_subdirectory(behavior)
add_subdirectory(cmdline)
add_subdirectory(comprehensive)
add_subdirectory(import)
add_subdirectory(prefix)

# Virtual Mode execution for tests.
add_subdirectory(virtual)
