# Copyright (c) Open Enclave SDK contributors.
# Licensed under the MIT License.

add_subdirectory(attributes)
add_subdirectory(basic)
add_subdirectory(behavior)
add_subdirectory(call_conflict)
add_subdirectory(cmdline)
add_subdirectory(comprehensive)
add_subdirectory(import)
add_subdirectory(prefix)
add_subdirectory(preprocessor)
add_subdirectory(safe_math)
add_subdirectory(warnings)

# Virtual Mode execution for tests.
add_subdirectory(virtual)
